# donna

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COVERAGE.md  DONNA-PRO.md  Dockerfile  README.md  docker-compose.docker.yml  docker-compose.yml  donna  justfile  package-lock.json  package.json  shannon  tsconfig.json  vitest.config.ts
.claude/commands/: debug.md  review.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-presentation.yml  desktop-release.yml
configs/: config-schema.json  example-config.yaml  router-config.json
dashboard/: Dockerfile  astro.config.mjs  package-lock.json  package.json  seed-admin.ts
mcp-server/: package-lock.json  package.json  tsconfig.json
prompts/: exploit-auth.txt  exploit-authz.txt  exploit-injection.txt  exploit-ssrf.txt  exploit-xss.txt  pre-recon-code.txt  recon.txt  report-executive.txt  vuln-auth.txt  vuln-injection.txt  vuln-ssrf.txt  vuln-xss.txt
sample-reports/: donna-report-capital-api.md
site/: astro.config.mjs  gen-pipeline-steps.mjs  generate-illustrations.mjs  package-lock.json  package.json  regen-pipeline.mjs
src/: config-parser.ts  progress-indicator.ts  session-manager.ts  splash-screen.ts
src-tauri/: Cargo.toml  docker-compose.tauri.yml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-sidecars.mjs  generate-icons.sh  setup.sh
src-tauri/src/: docker.rs  lib.rs  main.rs  sidecar.rs  tray.rs
src-tauri/ui/: index.html
xben-benchmark-results/: README.md
(+1534 files in other folders)
