[package]
name = "donna-desktop"
version = "1.0.0"
description = "Donna — Continuous AI Pentesting Desktop App"
authors = ["schlunsen"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "donna_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-localhost = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
portpicker = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
